--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="black1">#333</color>
     <color name="black2">#666</color>
     <color name="black3">#999</color>
+    <color name="eee">#eee</color>
 
 </resources>
