--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="black2">#666</color>
     <color name="black3">#999</color>
     <color name="eee">#eee</color>
+    <color name="e0e0e0">#e0e0e0</color>
 
 </resources>
