--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,7 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="home_tabTextSize">
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
