--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="black3">#999</color>
     <color name="eee">#eee</color>
     <color name="e0e0e0">#e0e0e0</color>
+    <color name="red">#f00</color>
 
 </resources>
