--- a/app/src/main/res/layout/item_home_waiting_for_goods.xml
+++ b/app/src/main/res/layout/item_home_waiting_for_goods.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:background="@color/white"
     android:elevation="3dp"
     android:orientation="vertical"
     tools:ignore="HardcodedText">
@@ -46,7 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="13dp">
+        android:layout_marginTop="13dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="19dp"
@@ -61,32 +66,179 @@
             android:layout_marginStart="11dp"
             android:orientation="vertical">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="美食送货"
-                android:textColor="#129d9b"
+                android:background="@drawable/layer_list_bottom_line1"
+                android:paddingBottom="7dp">
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:text="美食送货"
+                    android:textColor="#129d9b"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/tv_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_name"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginTop="12dp"
+                    android:text="地址: 西工区纱厂路1-11号"
+                    android:textColor="#129d9b"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/iv_arrow"
+                    android:layout_width="15dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="6dp"
+                    android:contentDescription="image"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_arrow_right" />
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_more"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:id="@+id/ll_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/layer_list_bottom_line1"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/item_food_detail" />
+
+                    <include layout="@layout/item_food_detail" />
+                </LinearLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+                    android:background="@drawable/layer_list_bottom_line1"
+                    android:paddingBottom="12dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="配送费"
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tv_money"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:text="¥2"
+                        android:textColor="@color/red"
+                        android:textSize="12sp" />
+                </FrameLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+                    android:text="订单备注"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_remark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+                    android:background="@drawable/layer_list_bottom_line1"
+                    android:paddingBottom="12dp"
+                    android:text="不放蒜, 少辣"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="19dp"
+            android:layout_height="23dp"
+            android:layout_marginTop="21dp"
+            android:contentDescription="image"
+            android:src="@drawable/ic_receive_address" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_name_and_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="张(先生) 130 0379 0123"
+                android:textColor="@color/black"
                 android:textSize="17sp" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/layer_list_bottom_line1"
-                android:paddingBottom="7dp"
-                android:text="地址: 西工区纱厂路1-11号"
-                android:textColor="#129d9b"
-                android:textSize="14sp" />
-
-            <TextView
+                android:id="@+id/tv_receive_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
-                android:background="@drawable/layer_list_bottom_line1"
-                android:paddingBottom="12dp"
-                android:text="配送费"
+                android:paddingBottom="7dp"
+                android:text="地址: 西工区紫金城A栋1101"
                 android:textColor="@color/black"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="19dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="115dp"
+                    android:layout_height="36dp"
+                    android:background="@drawable/shape_round_rectangle_18dp"
+                    android:text="联系"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:layout_width="135dp"
+                    android:layout_height="36dp"
+                    android:layout_marginStart="21dp"
+                    android:background="@drawable/shape_round_rectangle_18dp"
+                    android:text="上报到店"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
