--- a/app/src/main/res/layout/activity_home_be_sending_out_detail.xml
+++ b/app/src/main/res/layout/activity_home_be_sending_out_detail.xml
@@ -236,5 +236,8 @@
 
     </LinearLayout>
 
-
+    <com.amap.api.maps.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
