--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -213,6 +213,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/layer_list_bottom_line1"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:paddingBottom="17dp">
@@ -222,6 +223,33 @@
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
             android:text="接单设置"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="13dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="2dp"
+            android:contentDescription="image"
+            android:src="@drawable/ic_arrow_right1" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_data_setting"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:paddingBottom="17dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:text="设置"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
