--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="eee">#eee</color>
     <color name="e0e0e0">#e0e0e0</color>
     <color name="red">#f00</color>
+    <color name="red1">#b73432</color>
 
 </resources>
