--- a/app/src/main/res/layout/item_home_waiting_for_goods.xml
+++ b/app/src/main/res/layout/item_home_waiting_for_goods.xml
@@ -29,6 +29,7 @@
             android:src="@drawable/ic_clock" />
 
         <TextView
+            android:id="@+id/tv_waiting_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -37,6 +38,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -121,9 +123,9 @@
                     android:background="@drawable/layer_list_bottom_line1"
                     android:orientation="vertical">
 
-                    <include layout="@layout/item_food_detail" />
+                    <!--<include layout="@layout/item_food_detail" />-->
 
-                    <include layout="@layout/item_food_detail" />
+                    <!--<include layout="@layout/item_food_detail" />-->
                 </LinearLayout>
 
                 <FrameLayout
