--- a/app/src/main/res/layout/item_home_waiting_for_goods.xml
+++ b/app/src/main/res/layout/item_home_waiting_for_goods.xml
@@ -223,6 +223,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_call_phone"
                     android:layout_width="115dp"
                     android:layout_height="36dp"
                     android:background="@drawable/shape_round_rectangle_18dp"
@@ -231,6 +232,7 @@
                     android:textSize="16sp" />
 
                 <Button
+                    android:id="@+id/btn_arrival"
                     android:layout_width="135dp"
                     android:layout_height="36dp"
                     android:layout_marginStart="21dp"
