--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="black1">#333</color>
     <color name="black2">#666</color>
     <color name="black3">#999</color>
+    <color name="f7f7f7">#f7f7f7</color>
     <color name="eee">#eee</color>
     <color name="e0e0e0">#e0e0e0</color>
     <color name="red">#f00</color>
