--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
 
     <FrameLayout
         android:layout_width="239dp"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
