--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -76,21 +76,6 @@
             android:elevation="3dp"
             android:orientation="vertical">
 
-            <com.ruffian.library.RTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="15dp"
-                android:paddingStart="12dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="15dp"
-                android:text="全部订单"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                rtv:icon_direction="left"
-                rtv:icon_height="17dp"
-                rtv:icon_src_normal="@drawable/ic_all_order"
-                rtv:icon_width="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -203,33 +188,33 @@
                 <!--android:src="@drawable/ic_arrow_right1" />-->
         <!--</FrameLayout>-->
 
-        <!--<FrameLayout-->
-            <!--android:id="@+id/fl_health"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="20dp"-->
-            <!--android:layout_marginTop="15dp"-->
-            <!--android:layout_marginEnd="20dp"-->
-            <!--android:background="@drawable/layer_list_bottom_line1"-->
-            <!--android:paddingBottom="17dp">-->
+        <FrameLayout
+            android:id="@+id/fl_health"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/layer_list_bottom_line1"
+            android:paddingBottom="17dp">
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:includeFontPadding="false"-->
-                <!--android:text="健康证"-->
-                <!--android:textColor="@color/black"-->
-                <!--android:textSize="15sp" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="健康证"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
-            <!--<ImageView-->
-                <!--android:layout_width="7dp"-->
-                <!--android:layout_height="13dp"-->
-                <!--android:layout_gravity="end"-->
-                <!--android:layout_marginTop="2dp"-->
-                <!--android:layout_marginEnd="2dp"-->
-                <!--android:contentDescription="image"-->
-                <!--android:src="@drawable/ic_arrow_right1" />-->
-        <!--</FrameLayout>-->
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="13dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:contentDescription="image"
+                android:src="@drawable/ic_arrow_right1" />
+        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/fl_manage"
